test/classes/errors/nilability-init-field-arg/init-field-arg-nonnil-owned-from-oknil-owned.good
init-field-arg-nonnil-owned-from-oknil-owned.chpl:9: In initializer:
init-field-arg-nonnil-owned-from-oknil-owned.chpl:10: error: invalid copy-initialization
init-field-arg-nonnil-owned-from-oknil-owned.chpl:10: error: cannot initialize 'owned MyClass' from a 'owned MyClass?'
  init-field-arg-nonnil-owned-from-oknil-owned.chpl:14: called as MyRecord.init(rhs: owned MyClass?)
